Finish order products component

--- a/app/main/default/lwc/availableProducts/availableProducts.html
+++ b/app/main/default/lwc/availableProducts/availableProducts.html
@@ -4,6 +4,7 @@
 
 <template>
     <c-order-products-template
+        order-id={recordId}
         title={title}
         icon={icon}
         no-data-message={noDataMessage}
